# ai-meme-generator

./: .env.example  Cargo.toml  LICENSE  README.md
assets/templates/: metadata.json
src/: cli.rs  image.rs  logger.rs  main.rs  render.rs  template.rs
src/commands/: list.rs  mod.rs
