[package]
name = "ai-meme-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
image = "0.25.6"
imageproc = "0.25.0"
ab_glyph = "0.2.30"
ab_glyph_rasterizer = "0.1.9"
log = "0.4.27"
env_logger = "0.11.8"